<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorAccent"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/title"
            android:text="@string/advanced_search_title"
            android:textSize="@dimen/advanced_search_title"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="5sp"
            android:layout_marginLeft="19sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="8sp"
        android:layout_marginLeft="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/location_label"
            android:id="@+id/location_label"
            android:textStyle="bold"
            android:textColor="@color/label"
            android:textSize="@dimen/advanced_search_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/location_text"
            android:textColor="@color/selection"
            android:textSize="@dimen/advanced_search_text"
            android:layout_toRightOf="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/price"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_below="@id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/price_label"
            android:id="@+id/price_label"
            android:textStyle="bold"
            android:textColor="@color/label"
            android:textSize="@dimen/advanced_search_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/price_spinner"
            android:textColor="@color/selection"
            android:textSize="@dimen/advanced_search_text"
            android:layout_toRightOf="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_price"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_below="@id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/min_price_label"
            android:id="@+id/min_price_label"
            android:textStyle="bold"
            android:textColor="@color/label"
            android:textSize="@dimen/advanced_search_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/min_price_spinner"
            android:textColor="@color/selection"
            android:textSize="@dimen/advanced_search_text"
            android:layout_toRightOf="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rating"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_below="@id/min_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/rating_label"
            android:id="@+id/rating_label"
            android:textStyle="bold"
            android:textColor="@color/label"
            android:textSize="@dimen/advanced_search_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/rating_spinner"
            android:textColor="@color/selection"
            android:textSize="@dimen/advanced_search_text"
            android:layout_toRightOf="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radius"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_below="@id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/radius_label"
            android:id="@+id/radius_label"
            android:textStyle="bold"
            android:textColor="@color/label"
            android:textSize="@dimen/advanced_search_text"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/radius_spinner"
            android:textColor="@color/selection"
            android:textSize="@dimen/advanced_search_text"
            android:layout_toRightOf="@+id/radius_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/advanced_search"
        android:textSize="@dimen/advanced_search_text"
        android:id="@+id/submit_search"
        android:layout_below="@+id/radius"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>